# 2DGameDev

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/game/: Game.cpp  Game.h
src/objects/: objects.cpp  objects.h  obstacles.cpp  obstacles.h  utils.cpp  utils.h
src/player/: camera.cpp  camera.h  character.cpp  character.h
